# cloudinitwin

./: .gitignore  Cargo.toml  README.md  build.rs  package.ps1  package.sh
.github/workflows/: rust.yml
scripts/: Unattend.xml  install.ps1  sysprep.ps1  uninstall.ps1
src/: main.rs  network_config.rs  user_data.rs  util.rs  volumes.rs
